P4ADEV-4808: code review -  Enhance OpenAPI documentation and update ExtractionRequest model for MigrationFileType
