# src/main/java/it/gov/pagopa/mypay2pu/extractor/dto/ExtractionRequestDTO.java
@@ -1,7 +1,9 @@
 package it.gov.pagopa.mypay2pu.extractor.dto;
 
+import it.gov.pagopa.mypay2pu.extractor.enums.MigrationFileType;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -14,8 +16,8 @@ public class ExtractionRequestDTO {
   @NotBlank
   private String ipaCode;
 
-  @NotBlank
-  private String fileTypes;
+  @NotNull
+  private MigrationFileType fileType;
 
   @Valid
   private ExtractionFiltersDTO filters;
